--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  
+  <div class="card">
+    <figure class="qrcode">
+      <img src="/assets/images/image-qr-code.png" alt="image-qr-code">
+    </figure>
+    <h1 class="title">Improve your front-end skills by building projects</h1>
+    <p class="describe">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </div>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/connectshark" target="_blank">Nosegates</a>.
 </body>
 </html>
